# swissarmy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
docs/: pull_request_template.md
